# ArrPy

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  C_EXTENSION_GUIDE.md  C_PERFORMANCE_SUMMARY.md  Dockerfile  ENVIRONMENT_TESTING.md  EXPERIMENTAL.md  LICENSE  MANIFEST.in  NUMPY_COMPARISON_REPORT.md  NUMPY_GAP_ANALYSIS.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY_CHART.md  README.md  benchmark_cython.py  benchmark_results.json  benchmark_vs_numpy.py  build_c_ext.sh  check_features.py  docker-compose.yml  makefile  numpy_comparison_results.json  pyproject.toml  pytest.ini  pytest_skip_config.py  release.sh  requirements-dev.txt  requirements.txt  run_benchmarks_ml.py  run_ci_tests.py  run_comprehensive_tests.py  run_experimental.py  setup.py  setup_c_ext.py  setup_ml_env.sh  test_c_extension.py  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  optimization.md
.github/workflows/: ci.yml  test.yml
arrpy/: __init__.py  arrpy.py  arrpy_backend.py  backend_selector.py  broadcasting.py  core.py  creation.py  dtype.py  dtype_dispatcher.py  fft.py  indexing.py  io.py  linalg.py  main.py  manipulation.py  random.py  sorting.py  statistics.py  ufuncs.py  version.py
arrpy/backends/: __init__.py
arrpy/backends/c/: __init__.py  array_ops.cpp  array_ops.py  array_ops_buffer.cpp  array_ops_buffer.py  array_ops_fast.cpp  linalg_ops.cpp  linalg_ops.py  reduction_ops.cpp  reduction_ops.py  ufuncs_ops.cpp  ufuncs_ops.py
arrpy/backends/c/experimental/: array_ops_fast.py  array_ops_optimized.cpp
arrpy/backends/cython/: __init__.py  array_ops.pyx  linalg_ops.pyx  memory_pool.pxd  reduction_ops.pyx  setup_array_ops.py  ufuncs_ops.pyx
arrpy/backends/cython/experimental/: array_ops_optimized.c  array_ops_optimized.pyx  typed_ops.c
arrpy/backends/experimental_archive/c_experimental/: array_ops_optimized.cpp  array_ops_optimized.py
arrpy/backends/experimental_archive/cython_experimental/: array_ops_pooled.pyx  linalg_optimized.pyx  memory_pool.pyx  reduction_ops_optimized.pyx  typed_ops.pyx
arrpy/backends/python/: __init__.py  array_ops.py  fft_ops.py  linalg_advanced.py  linalg_ops.py  reduction_ops.py  sorting_ops.py  ufuncs_ops.py
arrpy/c_src/: c_array.c  c_array.h  c_operations.c
arrpy/core/: __init__.py  array.py  array_cython.pxd  array_cython.pyx  hybrid_array.py
arrpy/creation/: __init__.py  basic.py  basic_cython.pyx  ranges.py
arrpy/manipulation/: __init__.py  joining.py  shape.py
arrpy/math/: __init__.py  arithmetic.py  arithmetic_cython.pyx  logarithmic.py  rounding.py  trigonometric.py
arrpy/statistics/: __init__.py  aggregation.py  basic.py
arrypy/: main.py
benchmarks/: README.md  ascii_charts.py  bench_core.py  bench_creation.py  bench_linalg.py  bench_memory_pool.py  bench_simd.py  bench_ufuncs.py  benchmark_report.html  benchmark_v1.py  benchmark_validation.py  benchmark_vs_numpy.py  colors.py  compare_all_backends.py  compare_backends.py  html_report.py  micro_benchmarks.py  performance_comparison.py  profile_operations.py  quick_benchmark.py  run_benchmarks.py  sample_visualizations.py  scalability_test.py  scalability_test_clean.py  test_reductions.py  visualization.py
benchmarks/archive/: final_benchmark.py
docs/: API_REFERENCE.md  BACKEND_GUIDE.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  INSTALLATION.md  PERFORMANCE.md  README.md  index.md
docs/api/: array.md  creation.md  manipulation.md  math.md  statistics.md
docs/benchmarks/: CPP_OPTIMIZATION_RESULTS.md  FINAL_RESULTS.md  FINAL_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUMMARY.md
docs/development/: ARCHITECTURE_FIX_PLAN.md  ARRAY_BACKEND_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README_v1.md  UNIFIED_ARRAY_ANALYSIS.md
docs/guides/: USER_GUIDE.md  architecture.md  quickstart.md
docs/user/: MAKEFILE_USAGE.md  PROJECT_OVERVIEW.md  ROADMAP.md
examples/: README.md  array_creation_examples.py  array_manipulation_examples.py  basic_usage.py  comparison_and_logical_examples.py  data_analysis.py  error_handling.py  mathematical_functions_examples.py  matrix_operations.py  showcase.py  statistical_analysis_examples.py
scripts/: README.md  check_backends.py  run_ci_tests.py  test_skip_example.py
setup_extensions/: README.md  setup_buffer_cpp.py  setup_cpp.py  setup_cpp_fast.py  setup_optimized_cpp.py
tests/: conftest.py  test_array.py  test_array_backend.py  test_arrpy.py  test_backend_system.py  test_build_system.py  test_comprehensive.py  test_cpp_backend.py  test_cython_implementation.py  test_dtype.py  test_imports.py  test_indexing.py  test_new_functions.py  test_new_ops.py  test_numpy_compat.py  test_performance_regression.py  test_phase3.py
tests/core/: test_array_creation.py  test_array_indexing.py  test_array_properties.py
tests/creation/: test_basic_creation.py
tests/edge_cases/: test_empty_arrays.py
tests/experimental/: test_array_alternatives.py  test_fast_cpp.py  test_optimized_backend.py
tests/experimental_archive/: hybrid_array_prototype.py  test_dlpack_prototype.py
tests/integration/: test_numpy_compatibility.py
tests/math/: test_arithmetic.py  test_comparison.py  test_trigonometric.py
tests/performance/: test_performance_regression.py
tutorials/: 01_understanding_backends.py
