[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython>=0.29.0",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "arrpy"
version = "0.2.1"
description = "A Cython-optimized implementation mimicking NumPy's ndarray functionality"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "cython>=0.29.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/arrpy"
Repository = "https://github.com/yourusername/arrpy"
Issues = "https://github.com/yourusername/arrpy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arrpy*"]

[tool.cython-lint]
max-line-length = 88